moved language selection to header

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -5,3 +5,20 @@
     padding: 10px 15px;
     color: #9d9d9d;
 }
+
+.navbar-lang {
+    padding: 5px 5px;
+    height: 25px;
+}
+
+.navbar-lang:hover {
+    cursor: pointer;
+}
+
+.navbar-lang > span {
+    color: white;
+}
+
+active-lang {
+    background-color: #28a4c9;
+}
