added basic status bar logic

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -29,3 +29,14 @@ active-lang {
     margin: auto;
     padding-right: 10px;
 }
+
+.navbar-info-container {
+    margin-top:8px;
+}
+.navbar-info-container-item {
+    padding-right: 5px;
+}
+.navbar-info-container-item-text {
+    color: white;
+    font-size: 20px;
+}
