LoginController refactoring. Added error notification for sign in process

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -40,3 +40,8 @@ active-lang {
     color: white;
     font-size: 20px;
 }
+div.info-alert {
+    position: absolute;
+    z-index: 9999999;
+    right: 0;
+}
